--- a/3.htm
+++ b/3.htm
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Alexey Anshakov">
-    <meta name="keywords" content="webRunes">
+    <meta name="keywords" content="3">
     <meta name="google-site-verification" content="wW3kG-1bD4IishxXaidLtiLMKNTR3S0MH7Dnd3HpoY8" />
-    <title>webRunes</title>
+    <title>3</title>
 
     <script type="application/ld+json">
         {
@@ -33,7 +33,7 @@
         "@type": "Article",
         "inLanguage": "en",
         "keywords": "webRunes",
-        "name": "1",
+        "name": "3",
         "about": "Официальный хаб команды webRunes. Информация о проекте, его история развития, цели, а также наш блог.",
         "articleBody": [
         "webRunes (url) a team (url) of freelancers in various IT and other areas of expertize that are developing WRIO Internet OS platform (url). WRIO Internet OS is gate to semantic, decentralized and secure Internet. The platform is required for the technical implementation of the Alternative (url) - a set of projects aimed at the development of a free self-managed society, an alternative approach to the interaction of people with minimal or even without participation of the government (a reference to reducing the role of the state in society). The technical implementation is presented in the form of interconnected services that help people throughout their lives in different area: education, health, communication, finance and others.",
