--- a/3.htm
+++ b/3.htm
@@ -76,7 +76,7 @@
         "url": "https://ru.wikipedia.org/wiki/Китайская_комната?'Fusce':5,406"
         }
         ],
-        "author": "http://wr.io/713372365175/",
+        "author": "http://wr.io/713372365175?id=713372365175",
         "editor": "",
         "comment": "570802230606176256"
         }
