--- a/1.htm
+++ b/1.htm
@@ -76,7 +76,7 @@
         "url": "https://ru.wikipedia.org/wiki/Китайская_комната?'Fusce':5,406"
         }
         ],
-        "author": "http://alexeyanshakov.github.io/test",
+        "author": "http://alexeyanshakov.github.io/test?id=713372365175",
         "editor": "",
         "comment": "570802230606176256"
         }
