--- a/2.htm
+++ b/2.htm
@@ -108,6 +108,6 @@
 
 </head>
 <body>
-    <script type="text/javascript" src="https://wrioos.com/start.js"></script>
+    <script type="text/javascript" src="http://login.wrioos.local:5000/host/start.js"></script>
 </body>
 </html>
